--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,205 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
 
-  </body>
+<body>
+  <header class="page-header">
+    <a class="page-header__logo">
+      <img src="http://placehold.it/33x38" alt="Лого Кэт энерджи" class="page-header__logo-image" width="33"
+        height="38">
+      <img src="http://placehold.it/101x18" alt="Логотип Кэт энерджи" class="page-header__logo-type" width="101"
+        height="18">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+          <a class="site-list__link">
+            Главная
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html" class="site-list__link">
+            Каталог продукции
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a href="order.html" class="site-list__link">
+            Подбор программы
+          </a>
+        </li>
+
+      </ul>
+    </nav>
+  </header>
+
+  <main class="page-main">
+    <section class="page-main__section promo">
+      <h1 class="page-main__header">
+        Функциональное питание для котов
+      </h1>
+      <p class="promo__slogan">
+        Занялся собой? Займись котом!
+      </p>
+      <button class="promo-button button">
+        Подобрать программу
+      </button>
+    </section>
+
+    <section class="page-main__section programs">
+      <h2 class="visually-hidden">
+        Программы питания для котов
+      </h2>
+      <article class="program">
+        <h3 class="program__title program__title--slim">
+          Похудение
+        </h3>
+        <p class="program__text">
+          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim
+          поможет вашему питомцу сбросить лишний вес.
+        </p>
+        <a href="#" class="program__to-catalog">
+          Каталог Slim
+        </a>
+      </article>
+      <article class="program">
+        <h3 class="program__title program__title--gain">
+          Набор массы
+        </h3>
+        <p class="program__text">
+          Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить
+          необходимые мышцы!
+        </p>
+        <a href="#" class="program__to-catalog">
+          Каталог pro
+        </a>
+      </article>
+    </section>
+
+    <section class="page-main__section explanation">
+      <h2 class="explanation__title">
+        Как это работает
+      </h2>
+      <ul class="explanation__list">
+        <li class="explanation__item explanation__item--nutrients">
+          Функциональное питание содержит только полезные питательные вещества.
+        </li>
+        <li class="explanation__item explanation__item--powder">
+          Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+        </li>
+        <li class="explanation__item explanation__item--food">
+          Замените один-два приема обычной еды на наше функциональное питание.
+        </li>
+        <li class="explanation__item explanation__item--month">
+          Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+        </li>
+      </ul>
+    </section>
+
+    <section class="page-main__section example">
+      <h2 class="example__title">
+        Живой пример
+      </h2>
+      <p class="example__text">
+        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+        изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+      </p>
+      <table class="example__tabel table">
+        <tbody>
+          <tr class="table__row">
+            <td class="table__key">
+              Снижение веса
+            </td>
+            <td class="table__value">
+              5 кг
+            </td>
+          </tr>
+          <tr>
+            <td class="table__key">
+              Затрачено времени
+            </td>
+            <td class="table__value">
+              60 дней
+            </td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td class="table__footer" colspan="2">
+              Затраты на питание: 15 000 руб.
+            </td>
+          </tr>
+        </tfoot>
+      </table>
+      <div class="example__slider before-after">
+        <ul class="before-after__list">
+          <li class="before-after__item">
+            <img src="http://placehold.it/320x240" alt="slider1" width="320" height="240">
+          </li>
+        </ul>
+        <ul class="before-after__list">
+          <li class="before-after__item">
+            <img src="http://placehold.it/320x240" alt="slider2" width="320" height="240">
+          </li>
+        </ul>
+        <button class="before-after__button before-after__button--before">
+          Было
+        </button>
+        <button class="before-after__button before-after__button--after">
+          Стало
+        </button>
+      </div>
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <p class="page-footer__invitation">
+      Приглашаем к сотрудничеству дилеров!
+    </p>
+    <p class="page-footer__address">
+      ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+    </p>
+    <div class="page-footer__map">
+      <img class="page-footer__map-image" src="http://placehold.it/320x362"
+        alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" width="320" height="362">
+    </div>
+    <a href="#" class="page-footer__logo">
+      <img class="page-footer__logo-image" src="http://placehold.it/128x24" alt="Лого Cat Energy" width="128"
+        height="24">
+    </a>
+    <ul class="page-footer__social social">
+      <li class="social__item">
+        <a href="#" class="social__link">
+          Вконтакте
+        </a>
+      </li>
+      <li class="social__item">
+        <a href="#" class="social__link">
+          Instagram
+        </a>
+      </li>
+      <li class="social__item">
+        <a href="#" class="social__link">
+          Facebook
+        </a>
+      </li>
+    </ul>
+    <div class="page-footer__developers-credits">
+      <a href="https://htmlacademy.ru" class="page-footer__developer-link">
+        HTML Academy
+      </a>
+      <a href="https://htmlacademy.ru" class="page-footer__developer-logo">
+        <img src="http://placehold.it/27x34" alt="HTML Academy" class="page-footer__developers-logo-image" width="27"
+          height="34">
+      </a>
+    </div>
+  </footer>
+
+
+</body>
+
 </html>
