--- a/source/order.html
+++ b/source/order.html
@@ -1,165 +1,303 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <title>HTML Academy: Кэт энерджи</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Кэт энерджи</title>
-</head>
+  <body>
+    <header class="page-header">
+      <div class="page-header__top">
+        <div class="container page-header__logo">
+          <img
+            src="http://placehold.it/33x38"
+            alt="Лого Кэт энерджи"
+            class="page-header__logo-image"
+            width="33"
+            height="38"
+          />
+          <img
+            src="http://placehold.it/101x18"
+            alt="Логотип Кэт энерджи"
+            class="page-header__logo-type"
+            width="101"
+            height="18"
+          />
+          <button class="page-header__menu-toggle">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+        </div>
+      </div>
+      <nav class="main-nav">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="index.html" class="site-list__link">
+              Главная
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html" class="site-list__link">
+              Каталог продукции
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link">
+              Подбор программы
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-<body>
-  <header class="page-header">
-    <a class="page-header__logo">
-      <img src="http://placehold.it/33x38" alt="Лого Кэт энерджи" class="page-header__logo-image" width="33"
-        height="38">
-      <img src="http://placehold.it/101x18" alt="Логотип Кэт энерджи" class="page-header__logo-type" width="101"
-        height="18">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item">
-          <a href="index.html" class="site-list__link">
-            Главная
-          </a>
-        </li>
-        <li class="site-list__item">
-          <a href="catalog.html" class="site-list__link">
-            Каталог продукции
-          </a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link">
+    <main class="page-main">
+      <section class="page-main__section selection">
+        <div class="container">
+          <h2 class="selection__title">
             Подбор программы
+          </h2>
+          <p class="selection__text">
+            Заполните анкету и мы подберем программу питания для вашего кота
+          </p>
+        </div>
+        <form
+          action=" https://echo.htmlacademy.ru"
+          class="selection__form form"
+        >
+          <fieldset class="form__fieldset">
+            <div class="container">
+              <div class="form__field">
+                <label for="name" class="form__label">Имя:<sup>*</sup></label>
+                <input
+                  class="form__input"
+                  type="text"
+                  id="name"
+                  name="name"
+                  placeholder="Барсик"
+                />
+              </div>
+              <div class="form__field">
+                <label for="weight" class="form__label"
+                  >Вес&nbsp;(кг):<sup>*</sup></label
+                >
+                <input
+                  class="form__input"
+                  type="text"
+                  id="weight"
+                  name="weight"
+                  placeholder="7"
+                />
+              </div>
+              <div class="form__field">
+                <label for="age" class="form__label">Возраст&nbsp;(лет):</label>
+                <input
+                  class="form__input"
+                  type="text"
+                  id="age"
+                  name="age"
+                  placeholder="7"
+                />
+              </div>
+            </div>
+          </fieldset>
+          <fieldset class="form__fieldset">
+            <div class="container">
+              <div class="form__field">
+                <input
+                  type="radio"
+                  class="form__input-radio"
+                  id="lost-weight"
+                  name="goal"
+                  value="lost-weight"
+                  checked
+                />
+                <label for="lost-weight" class="form__label form__label--radio">Похудение</label>
+              </div>
+              <div class="form__field">
+                <input
+                  type="radio"
+                  class="form__input-radio"
+                  id="gain-weight"
+                  name="goal"
+                  value="gain-weight"
+                />
+                <label for="gain-weight" class="form__label form__label--radio">Набор массы</label>
+              </div>
+              <div class="form__field">
+                <input
+                  type="radio"
+                  class="form__input-radio"
+                  id="dontknow"
+                  name="goal"
+                  value="dontknow"
+                />
+                <label for="dontknow" class="form__label form__label--radio">
+                  Не знаю (Нужен ваш совет)
+                </label>
+              </div>
+            </div>
+          </fieldset>
+          <fieldset class="form__fieldset">
+            <div class="container">
+              <div class="form__legend">
+                Контактные данные</br>(владельца кота)
+              </div>
+              <div class="form__field">
+                <label for="email" class="form__label"
+                  >E-mail:<sup>*</sup></label
+                >
+                <input
+                  type="text"
+                  class="form__input form__input--email"
+                  id="email"
+                  name="email"
+                  placeholder="kuklachev@gmail.com"
+                />
+              </div>
+              <div class="form__field">
+                <label for="phone" class="form__label"
+                  >Телефон:<sup>*</sup></label
+                >
+                <input
+                  type="tel"
+                  class="form__input form__input--phone"
+                  id="phone"
+                  name="phone"
+                  placeholder="8 (960) 900-60-90"
+                />
+              </div>
+            </div>
+          </fieldset>
+          <fieldset class="form__fieldset">
+            <div class="container">
+              <legend class="form__legend">
+                Комментарий
+              </legend>
+              <textarea
+                class="form__textarea"
+                name="comment"
+                id="comment"
+                placeholder="Расскажите обо всех повадках кота"
+              ></textarea>
+            </div>
+          </fieldset>
+          <fieldset class="form__fieldset">
+            <div class="container">
+              <legend class="form__legend">Дополнительно</legend>
+              <div class="form__field">
+                <input
+                  class="form__input-checkbox"
+                  type="checkbox"
+                  id="sugarfree"
+                  name="sugarfree"
+                  checked
+                />
+                <label class="form__label form__label--checkbox" for="sugarfree"
+                  >Сахарозаменитель</label
+                >
+              </div>
+              <div class="form__field">
+                <input
+                  class="form__input-checkbox"
+                  type="checkbox"
+                  id="water"
+                  name="water"
+                />
+                <label class="form__label form__label--checkbox" for="water">Питьевая вода</label>
+              </div>
+              <div class="form__field">
+                <input
+                  class="form__input-checkbox"
+                  type="checkbox"
+                  id="milk"
+                  name="milk"
+                />
+                <label class="form__label form__label--checkbox" for="milk">Молоко</label>
+              </div>
+              <div class="form__field">
+                <input
+                  class="form__input-checkbox"
+                  type="checkbox"
+                  id="vitamins"
+                  name="vitamins"
+                />
+                <label class="form__label form__label--checkbox" for="vitamins">Витамины</label>
+              </div>
+            </div>
+          </fieldset>
+          <div class="container">
+            <button class="button form__button" type="submit">
+              Отправить заявку
+            </button>
+            <p class="form__footnote"><sup>*</sup> — Обязательные поля</p>
+          </div>
+        </form>
+      </section>
+      <div class="page-main__section page-main__section--gray address">
+        <div class="container container--no-padding">
+          <p class="address__invitation">
+            Приглашаем к&nbsp;сотрудничеству дилеров!
+          </p>
+          <p class="address__address">
+            ул. Большая Конюшенная,&nbsp;д.&nbsp;19/8 Санкт-Петербург
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__map">
+        <img
+          class="page-footer__map-image"
+          src="http://placehold.it/320x362"
+          alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
+          width="320"
+          height="362"
+        />
+      </div>
+      <div class="container">
+        <a href="#" class="page-footer__logo">
+          <img
+            class="page-footer__logo-image"
+            src="http://placehold.it/128x24"
+            alt="Лого Cat Energy"
+            width="128"
+            height="24"
+          />
+        </a>
+        <ul class="page-footer__social social">
+          <li class="social__item">
+            <a href="#" class="social__link">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="#" class="social__link">
+              <span class="visually-hidden">Instagram</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="#" class="social__link">
+              <span class="visually-hidden">Facebook</span>
+            </a>
+          </li>
+        </ul>
+        <div class="page-footer__developers-credits">
+          <a href="https://htmlacademy.ru" class="page-footer__developers-link">
+            HTML Academy
           </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="page-main">
-    <section class="page-main__section selection">
-      <h2 class="selection__title">
-        Подбор программы
-      </h2>
-      <p class="selectin__text">Заполните анкету и мы подберем программу питания для вашего кота</p>
-      <form action=" https://echo.htmlacademy.ru" class="selection__form form">
-        <fieldset class="form__fieldset">
-          <div class="form__field">
-            <label for="name" class="form_label">Имя:<sup>*</sup></label>
-            <input class="form__input" type="text" id="name" name="name" placeholder="Барсик">
-          </div>
-          <div class="form__field">
-            <label for="weight" class="form_label">Вес (кг):<sup>*</sup></label>
-            <input class="form__input" type="text" id="weight" name="weight" placeholder="7">
-          </div>
-          <div class="form__field">
-            <label for="age" class="form_label">Возраст (лет):</label>
-            <input class="form__input" type="text" id="age" name="age" placeholder="7">
-          </div>
-        </fieldset>
-        <fieldset class="form__fieldset">
-          <div class="form__field">
-            <input type="radio" class="vsually-hidden" id="lost-weight" name="goal" value="lost-weight" checked>
-            <label for="lost-weight" class="form__label">Похудение</label>
-          </div>
-          <div class="form__field">
-            <input type="radio" class="vsually-hidden" id="gain-weight" name="goal" value="gain-weight">
-            <label for="gain-weight" class="form__label">Набор массы</label>
-          </div>
-          <div class="form__field">
-            <input type="radio" class="vsually-hidden" id="dontknow" name="goal" value="dontknow">
-            <label for="dontknow" class="form__label">Не знаю (Нужен ваш совет)</label>
-          </div>
-        </fieldset>
-        <fieldset class="form__fieldset">
-          <legend class="form__legend">Контактные данные (владельца кота)</legend>
-          <div class="form__field">
-            <label for="email" class="form__label">E-mail:<sup>*</sup></label>
-            <input type="text" class="form__imput form__imput--email" id="email" name="email"
-              placeholder="kuklachev@gmail.com">
-          </div>
-          <div class="form__field">
-            <label for="phone" class="form__label">Телефон:<sup>*</sup></label>
-            <input type="text" class="form__imput form__imput--phone" id="phone" name="phone"
-              placeholder="8 (960) 900-60-90">
-          </div>
-        </fieldset>
-        <fieldset class="form__fieldset">
-          <legend class="form__legend">
-            Комментарий
-          </legend>
-          <textarea class="form__textarea" name="comment" id="comment"
-            placeholder="Расскажите обо всех повадках кота"></textarea>
-        </fieldset>
-        <fieldset class="form__fieldset">
-          <legend class="form__legend">Дополнительно</legend>
-          <div class="form__field">
-            <input class="visually-hidden" type="checkbox" id="sugarfree" name="sugarfree" checked>
-            <label class="form__label" for="sugarfree">Сахарозаменитель</label>
-          </div>
-          <div class="form__field">
-            <input class="visually-hidden" type="checkbox" id="water" name="water">
-            <label class="form__label" for="water">Питьевая вода</label>
-          </div>
-          <div class="form__field">
-            <input class="visually-hidden" type="checkbox" id="milk" name="milk">
-            <label class="form__label" for="milk">Молоко</label>
-          </div>
-          <div class="form__field">
-            <input class="visually-hidden" type="checkbox" id="vitamins" name="vitamins">
-            <label class="form__label" for="vitamins">Витамины</label>
-          </div>
-        </fieldset>
-        <button class="button form__button" type="submit">Отправить заявку</button>
-        <p class="form__footnote"><sup>*</sup> — Обязательные поля</p>
-      </form>
-    </section>
-  </main>
-
-  <footer class="page-footer">
-    <p class="page-footer__invitation">
-      Приглашаем к сотрудничеству дилеров!
-    </p>
-    <p class="page-footer__address">
-      ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-    </p>
-    <div class="page-footer__map">
-      <img class="page-footer__map-image" src="http://placehold.it/320x362"
-        alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" width="320" height="362">
-    </div>
-    <a href="#" class="page-footer__logo">
-      <img class="page-footer__logo-image" src="http://placehold.it/128x24" alt="Лого Cat Energy" width="128"
-        height="24">
-    </a>
-    <ul class="page-footer__social social">
-      <li class="social__item">
-        <a href="#" class="social__link">
-          Вконтакте
-        </a>
-      </li>
-      <li class="social__item">
-        <a href="#" class="social__link">
-          Instagram
-        </a>
-      </li>
-      <li class="social__item">
-        <a href="#" class="social__link">
-          Facebook
-        </a>
-      </li>
-    </ul>
-    <div class="page-footer__developers-credits">
-      <a href="https://htmlacademy.ru" class="page-footer__developer-link">
-        HTML Academy
-      </a>
-      <a href="https://htmlacademy.ru" class="page-footer__developer-logo">
-        <img src="http://placehold.it/27x34" alt="HTML Academy" class="page-footer__developers-logo-image" width="27"
-          height="34">
-      </a>
-    </div>
-  </footer>
-
-
-</body>
-
+          <a href="https://htmlacademy.ru" class="page-footer__developers-logo">
+            <img
+              src="http://placehold.it/27x34"
+              alt="HTML Academy"
+              class="page-footer__developers-logo-image"
+              width="27"
+              height="34"
+            />
+          </a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
