--- a/source/order.html
+++ b/source/order.html
@@ -58,96 +58,114 @@
           <h2 class="selection__title">
             Подбор программы
           </h2>
-          <p class="selection__text">
+          <p class="form__text">
             Заполните анкету и мы подберем программу питания для вашего кота
           </p>
         </div>
+
         <form
           action=" https://echo.htmlacademy.ru"
           class="selection__form form"
         >
           <fieldset class="form__fieldset">
-            <div class="container">
-              <div class="form__field">
-                <label for="name" class="form__label">Имя:<sup>*</sup></label>
-                <input
-                  class="form__input"
-                  type="text"
-                  id="name"
-                  name="name"
-                  placeholder="Барсик"
-                />
+            <div class="form__fieldset--inner">
+              <div class="container form__container-inner">
+                <div class="form__field">
+                  <label for="name" class="form__label">Имя:<sup>*</sup></label>
+                  <input
+                    class="form__input"
+                    type="text"
+                    id="name"
+                    name="name"
+                    placeholder="Барсик"
+                  />
+                </div>
+                <div class="form__field">
+                  <label for="weight" class="form__label"
+                    >Вес&nbsp;(кг):<sup>*</sup></label
+                  >
+                  <input
+                    class="form__input"
+                    type="text"
+                    id="weight"
+                    name="weight"
+                    placeholder="7"
+                  />
+                </div>
+                <div class="form__field">
+                  <label for="age" class="form__label"
+                    >Возраст&nbsp;(лет):</label
+                  >
+                  <input
+                    class="form__input"
+                    type="text"
+                    id="age"
+                    name="age"
+                    placeholder="7"
+                  />
+                </div>
               </div>
-              <div class="form__field">
-                <label for="weight" class="form__label"
-                  >Вес&nbsp;(кг):<sup>*</sup></label
-                >
-                <input
-                  class="form__input"
-                  type="text"
-                  id="weight"
-                  name="weight"
-                  placeholder="7"
-                />
-              </div>
-              <div class="form__field">
-                <label for="age" class="form__label">Возраст&nbsp;(лет):</label>
-                <input
-                  class="form__input"
-                  type="text"
-                  id="age"
-                  name="age"
-                  placeholder="7"
-                />
+              <div
+                class="container form__container-inner form__container-inner--bordered"
+              >
+                <div class="form__field">
+                  <input
+                    type="radio"
+                    class="form__input-radio"
+                    id="lost-weight"
+                    name="goal"
+                    value="lost-weight"
+                    checked
+                  />
+                  <label
+                    for="lost-weight"
+                    class="form__label form__label--radio"
+                    >Похудение</label
+                  >
+                </div>
+                <div class="form__field">
+                  <input
+                    type="radio"
+                    class="form__input-radio"
+                    id="gain-weight"
+                    name="goal"
+                    value="gain-weight"
+                  />
+                  <label
+                    for="gain-weight"
+                    class="form__label form__label--radio"
+                    >Набор массы</label
+                  >
+                </div>
+                <div class="form__field">
+                  <input
+                    type="radio"
+                    class="form__input-radio"
+                    id="dontknow"
+                    name="goal"
+                    value="dontknow"
+                  />
+                  <label for="dontknow" class="form__label form__label--radio">
+                    Не знаю (Нужен ваш совет)
+                  </label>
+                </div>
               </div>
             </div>
           </fieldset>
+
           <fieldset class="form__fieldset">
-            <div class="container">
-              <div class="form__field">
-                <input
-                  type="radio"
-                  class="form__input-radio"
-                  id="lost-weight"
-                  name="goal"
-                  value="lost-weight"
-                  checked
-                />
-                <label for="lost-weight" class="form__label form__label--radio">Похудение</label>
+            <legend class="form__legend">
+              <div class="container form__legend-container">
+                <p class="form__legend-text">
+                  Контактные данные <br />(владельца кота)
+                </p>
               </div>
+            </legend>
+            <div class="container form__container">
               <div class="form__field">
-                <input
-                  type="radio"
-                  class="form__input-radio"
-                  id="gain-weight"
-                  name="goal"
-                  value="gain-weight"
-                />
-                <label for="gain-weight" class="form__label form__label--radio">Набор массы</label>
-              </div>
-              <div class="form__field">
-                <input
-                  type="radio"
-                  class="form__input-radio"
-                  id="dontknow"
-                  name="goal"
-                  value="dontknow"
-                />
-                <label for="dontknow" class="form__label form__label--radio">
-                  Не знаю (Нужен ваш совет)
+                <label for="email" class="form__label">
+                  E-mail:<sup>*</sup>
                 </label>
-              </div>
-            </div>
-          </fieldset>
-          <fieldset class="form__fieldset">
-            <div class="container">
-              <div class="form__legend">
-                Контактные данные</br>(владельца кота)
-              </div>
-              <div class="form__field">
-                <label for="email" class="form__label"
-                  >E-mail:<sup>*</sup></label
-                >
                 <input
                   type="text"
                   class="form__input form__input--email"
@@ -171,10 +189,14 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset">
-            <div class="container">
-              <legend class="form__legend">
-                Комментарий
-              </legend>
+            <legend class="form__legend">
+              <div class="container form__legend-container">
+                <p class="form__legend-text">
+                  Комментарий
+                </p>
+              </div>
+            </legend>
+            <div class="container form__container">
               <textarea
                 class="form__textarea"
                 name="comment"
@@ -184,8 +206,14 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset">
-            <div class="container">
-              <legend class="form__legend">Дополнительно</legend>
+            <legend class="form__legend">
+              <div class="container form__legend-container">
+                <p class="form__legend-text">
+                  Дополнительно
+                </p>
+              </div>
+            </legend>
+            <div class="container form__container form__additions">
               <div class="form__field">
                 <input
                   class="form__input-checkbox"
@@ -194,9 +222,12 @@
                   name="sugarfree"
                   checked
                 />
-                <label class="form__label form__label--checkbox" for="sugarfree"
-                  >Сахарозаменитель</label
+                <label
+                  class="form__label form__label--checkbox"
+                  for="sugarfree"
                 >
+                  Сахарозаменитель
+                </label>
               </div>
               <div class="form__field">
                 <input
@@ -205,7 +236,9 @@
                   id="water"
                   name="water"
                 />
-                <label class="form__label form__label--checkbox" for="water">Питьевая вода</label>
+                <label class="form__label form__label--checkbox" for="water"
+                  >Питьевая вода</label
+                >
               </div>
               <div class="form__field">
                 <input
@@ -214,7 +247,9 @@
                   id="milk"
                   name="milk"
                 />
-                <label class="form__label form__label--checkbox" for="milk">Молоко</label>
+                <label class="form__label form__label--checkbox" for="milk"
+                  >Молоко</label
+                >
               </div>
               <div class="form__field">
                 <input
@@ -223,11 +258,13 @@
                   id="vitamins"
                   name="vitamins"
                 />
-                <label class="form__label form__label--checkbox" for="vitamins">Витамины</label>
+                <label class="form__label form__label--checkbox" for="vitamins"
+                  >Витамины</label
+                >
               </div>
             </div>
           </fieldset>
-          <div class="container">
+          <div class="container form__container form__submit">
             <button class="button form__button" type="submit">
               Отправить заявку
             </button>
@@ -235,18 +272,19 @@
           </div>
         </form>
       </section>
-      <div class="page-main__section page-main__section--gray address">
-        <div class="container container--no-padding">
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__address address">
+        <div class="container">
           <p class="address__invitation">
             Приглашаем к&nbsp;сотрудничеству дилеров!
           </p>
           <p class="address__address">
-            ул. Большая Конюшенная,&nbsp;д.&nbsp;19/8 Санкт-Петербург
+            ул. Большая Конюшенная,&nbsp;д.&nbsp;19/8
+            <span class="address__address-city">Санкт-Петербург</span>
           </p>
         </div>
       </div>
-    </main>
-    <footer class="page-footer">
       <div class="page-footer__map">
         <img
           class="page-footer__map-image"
